<resources>
    <string name="app_name">weatherliving</string>
    <string name="textview">TextView</string>
    <string name="str_sido">"시/도"를 선택하세요</string>
    <string name="str_gu">"구"를 선택하세요</string>
    <string name="str_dong">"동"를 선택하세요</string>
    <string name="txtPosition" />
    <string name="txtWeatherInfo" />
    <string name="txtDate" />
    <string name="textWeathreTemp" />
</resources>